[tool.poetry]
name = "corems"
version = "2.0.a0"
description = "Object Oriented Mass Spectrometry ToolBox"
authors = ["Corilo, Yuri <corilo@pnnl.gov>"]
exclude = ["corems/test/*.*", "corems/libs/*.*", "corems/bokeh_imple/*.*", "corems/emsl/yec/input/ThermoRaw.py"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
poetry = "^0.12.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
